# AlphaFlow

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/go-service/: Dockerfile.market-data  go.mod  go.sum
backend/python-service/alphaflow-core/: pyproject.toml
backend/python-service/alphaflow-core/src/alphaflow/: __init__.py  logging.py  main.py
backend/python-service/alphaflow-core/src/alphaflow/market_data/: __init__.py  clickhouse_reader.py  keys.py  reader.py
backend/python-service/alphaflow-core/src/alphaflow/strategy/: __init__.py  engine.py  indicator_window.py  models.py  position.py  position_store.py  rules.py  runner.py  window.py
backend/python-service/alphaflow-core/src/alphaflow/strategy/strategies/: __init__.py  base.py  supertrend.py
backend/python-service/alphaflow-core/tests/: test_indicator_window.py  test_logging.py  test_main.py  test_market_data_reader.py  test_position_store.py  test_strategy_engine.py  test_strategy_runner.py  test_window_analysis.py
docs/: architecture.md  control-api.md  indicators.md  market-capability-architecture.md  market-data.md  open-source-quant-lessons.md  performance-optimization-history.md  polymarket-research.md  progress.md
docs/strategies/: README.md  go-strategy-engine.md  market-regime.md  market-structure-research-2025-08.md  market-swing-admission-research-2025-08-10.md  ribbon-supertrend-research-2026-07-21.md  supertrend-optimization.md  supertrend.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
(+626 files in other folders)
