[project]
name = "alphaflow-backend"
version = "0.1.0"
description = "Python backend for AlphaFlow."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests"]
